--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Industrious by TEMPLATED</title>
+		<title>pedro3pv page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+				<a class="logo" href="index.html">pedro3pv page</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -46,13 +46,18 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>edited by pedro3v</h2>
+						<p>working in progress</p>
 					</header>
 					<div class="highlights">
 						<section>
 							<div class="content">
 								<header>
+                                                                       <p>8 ball pool hack</p>
+                                                                       <a href="itms-services://?action=download-manifest&amp; 
+                                                                       url=https://pedro3pv.github.io/ipa-library-download/8_ball_pool_hack.plist">
+                                                                       Download
+                                                                       </a>
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 									<h3>Feugiat consequat</h3>
 								</header>
