--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                                                                        url=https://pedro3pv.github.io/ipa-library-download/8_ball_pool_hack.plist">
                                                                        Download
                                                                        </a>
-									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+                                                                        <img src="imagens/8_ball.png">
 									<h3>Feugiat consequat</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>working in progress</p>
 							</div>
 						</section>
 						<section>
