--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<header>
                                     <p>↓8 ball pool hack download↓</p>
                                     <a href="itms-services://?action=download-manifest&amp; 
-                                    url=https://pedro3pv.github.io/ipa-library-download/8_ball_pool_hack.plist">
+                                    url=itms-services://pedro3pv.github.io/ipa-library-download/8_ball_pool_hack.plistpedro3pv.github.io/ipa-library-download/8_ball_pool_hack.plist">
                                     Download
                                     </a>
                                     <img src="imagens/8_ball.png">
