--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
+					<h1>pedro3pv page</h1>
+					<p>a responsible "programmer"<br />
 					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
@@ -54,9 +54,10 @@
 							<div class="content">
 								<header>
                                     <p>↓8 ball pool hack download↓</p>
-                                    <a href="itms-services://?action=download-manifest&amp;url=https://pedro3pv.github.io/ipa-library-download/8_ball_pool_hack.plist">
-                                    Download
-                                    </a>
+                                    <a href="itms-services://?action=download-manifest&amp; 
+    url=https://pedro3pv.github.io/ipa-library-download/8_ball_pool_hack.plist">
+    Download
+</a>
                                     <img src="imagens/8_ball.png">
 									<h3>↑8 ball pool hack download↑</h3>
 								</header>
