--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<div class="content">
 								<header>
                                     <p>↓8 ball pool hack download↓</p>
-                                    <a href="itms-services://?action=download-manifest&url=http://dl.dropbox.com/s/g97372muh55un9h/8_ball_pool_hack.plist">
+                                    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/pedro3pv/ipa-library-download/master/8_ball_pool_hack.plist">
     Download
 </a>
                                     <img src="imagens/8_ball.png">
